--- a/src/App.scss
+++ b/src/App.scss
@@ -264,6 +264,14 @@ header {
     }
 }
 
+.fa-shopping-cart {
+    position: fixed;
+    right: 1rem;
+    top: 200px;
+    color: $primary;
+    font-size: 2rem;
+}
+
 #ourstory .media {
     img {
         border-radius: 50%;
