Created shopping cart with items and animation

--- a/src/App.scss
+++ b/src/App.scss
@@ -161,12 +161,51 @@ header {
     }
 }
 
+button.nav-link {
+    border: none;
+    background-color: rgba(255,255,255,0);
+}
+
 .nav-link {
     color:black!important;
 }
 
 .nav-link:hover {
     color:var(--primary)!important;
+}
+
+.shopping-cart {
+    position: fixed;
+    right: 0;
+    top: 0;
+    height: 100vh;
+    width: 80vw;
+    background-color: white;
+    z-index: 4000;
+    overflow-y:scroll;
+    overflow-x:visible;
+    opacity: 1;
+    transition: right 250ms ease-in-out;
+    border: 2px solid black;
+}
+
+.shopping-cart-hide{
+    right: -80vw;
+}
+
+.cart-button{
+    position: absolute;
+    left: 0px;
+    top: 50vh;
+    border: 2px solid orange;
+}
+
+.cart-footer{
+    position: absolute;
+    margin: 0;
+    bottom: 0;
+    width: 100%;
+    border: 2px solid pink;
 }
 
 .about-left {
