--- a/src/App.scss
+++ b/src/App.scss
@@ -178,19 +178,35 @@ button.nav-link {
     position: fixed;
     right: 0;
     top: 0;
+    padding-top: 1rem;
     height: 100vh;
-    width: 80vw;
+    width: 40vw;
     background-color: white;
     z-index: 4000;
-    overflow-y:scroll;
-    overflow-x:visible;
     opacity: 1;
-    transition: right 250ms ease-in-out;
-    border: 2px solid black;
+    transition: right 250ms ease-in-out,
+                box-shadow 150ms ease-in-out;
+    border-left: .5rem solid $primary;
+/*     -webkit-box-shadow: -50px 0px 0px 50px rgba(0,0,0,0.5); 
+    box-shadow: -40vw 0px 0px 50vw rgba(0,0,0,0.5); */
 }
 
 .shopping-cart-hide{
-    right: -80vw;
+    right: -40vw;
+    box-shadow: none;
+}
+
+@media (max-width: 992px) {
+    .shopping-cart {
+        width: 80vw;
+        -webkit-box-shadow: -15vw 0px 0px 15vw rgba(0,0,0,0.5); 
+        box-shadow: -15vw 0px 0px 15vw rgba(0,0,0,0.5);
+    }
+
+    .shopping-cart-hide {
+        right: -80vw;
+        box-shadow: none;
+    }
 }
 
 .cart-button{
@@ -206,6 +222,23 @@ button.nav-link {
     bottom: 0;
     width: 100%;
     border: 2px solid pink;
+}
+
+.cart-bg{
+    position: fixed;
+    top: 0;
+    right: 0;
+    height: 100vh;
+    width: 100vw;
+    background-color: rgba(0,0,0,0.5);
+    z-index: 3999;
+    opacity: 1;
+    transition: opacity 500ms ease-in-out;
+}
+
+.cart-bg-hide {
+    right: -100vw;
+    opacity: 0;
 }
 
 .about-left {
