--- a/src/App.scss
+++ b/src/App.scss
@@ -1,4 +1,6 @@
 $primary: #f5933d;
+$primary-dark: #d5690b;
+$primary-light: rgba(245, 147, 61, 0.6);
 $secondary: #6c757d;
 $success: #28a745;
 $info: #17a2b8;
@@ -10,578 +12,619 @@ $dark: #343a40;
 @import "node_modules/bootstrap/scss/bootstrap";
 
 html {
-    scroll-behavior: smooth;
-    scroll-padding-top:180px;
+  scroll-behavior: smooth;
+  scroll-padding-top: 180px;
 }
 
 body {
-    font-family: 'Poppins', sans-serif;
+  font-family: "Poppins", sans-serif;
 }
 
-h1, h2, h2, h3, h4, h5, h6, button {
-    font-family: 'Roboto Slab', serif;
+/* width */
+::-webkit-scrollbar {
+  width: 0.9rem;
+}
+
+/* Track */
+::-webkit-scrollbar-track {
+  background: #f1f1f1;
+}
+
+/* Handle */
+::-webkit-scrollbar-thumb {
+  background: $primary;
+  border: 0.2rem solid rgba(0, 0, 0, 0);
+  background-clip: padding-box;
+  -webkit-background-cip: padding-box;
+  border-radius: 0.5rem;
+  -webkit-border-radius: 0.5rem;
+}
+
+/* Handle on hover */
+::-webkit-scrollbar-thumb:hover {
+  background: $primary-light;
+  border: 0.2rem solid rgba(0, 0, 0, 0);
+  background-clip: padding-box;
+  -webkit-background-cip: padding-box;
+  -webkit-border-radius: 0.5rem;
+}
+
+h1,
+h2,
+h2,
+h3,
+h4,
+h5,
+h6,
+button {
+  font-family: "Roboto Slab", serif;
 }
 
 button {
-    text-transform: uppercase;
+  text-transform: uppercase;
 }
 
 .btn-primary {
-    color: $light;
-    font-weight:bolder;
+  color: $light;
+  font-weight: bolder;
 }
 
 .divider {
-    border-radius: 4rem;
-    width:50%;
-    border: 2px solid rgba(187, 187, 187, 0.171);
-    margin-top: 3rem;
-    margin-bottom: 3rem;
+  border-radius: 4rem;
+  width: 50%;
+  border: 2px solid rgba(187, 187, 187, 0.171);
+  margin-top: 3rem;
+  margin-bottom: 3rem;
 }
 
 .border {
-    border: 2px solid pink;
+  border: 2px solid pink;
 }
 
 header {
-    .fa {
-        font-size: 1.5rem;
-    }
+  .fa {
+    font-size: 1.5rem;
+  }
 
-    .img-fluid {
-        max-width: 125px;
-        height: auto;
-    }
+  .img-fluid {
+    max-width: 125px;
+    height: auto;
+  }
 }
 
 @media (max-width: 992px) {
-    .navbar-collapse {
-        position: fixed;
-        top: 113px;
-        left: 100%;
-        padding-left: 15px;
-        padding-right: 15px;
-        padding-bottom: 15px;
-        width: 100%;
-        transition: all 0.4s ease;
-        display: block;
-        background-color: $light;
-    }
-    .navbar-collapse.collapsing {
-        height: auto !important;
-        margin-left: 50%;
-        left: 50%;
-        transition: all 0.2s ease;
-    }
-    .navbar-collapse.show {
-        left: 0;
-    }
+  .navbar-collapse {
+    position: fixed;
+    top: 113px;
+    left: 100%;
+    padding-left: 15px;
+    padding-right: 15px;
+    padding-bottom: 15px;
+    width: 100%;
+    transition: all 0.4s ease;
+    display: block;
+    background-color: $light;
+  }
+  .navbar-collapse.collapsing {
+    height: auto !important;
+    margin-left: 50%;
+    left: 50%;
+    transition: all 0.2s ease;
+  }
+  .navbar-collapse.show {
+    left: 0;
+  }
 }
 
 .hamburger-wrapper {
-    position: relative;
-    height: 30px;
-    width: 30px;
-    cursor: pointer;
-    z-index: 1001;
+  position: relative;
+  height: 30px;
+  width: 30px;
+  cursor: pointer;
+  z-index: 1001;
 }
 
 .hamburger {
+  position: absolute;
+  height: 2px;
+  width: 100%;
+  left: 50%;
+  top: 50%;
+  background-color: black;
+  border-radius: 1px;
+  margin: -1px 0 0 -15px;
+  transition: height 100ms ease-in;
+
+  &:after,
+  &:before {
+    content: "";
     position: absolute;
     height: 2px;
     width: 100%;
     left: 50%;
-    top: 50%;
+    margin-left: -15px;
     background-color: black;
     border-radius: 1px;
-    margin: -1px 0 0 -15px;
-    transition: height 100ms ease-in;
-    
-    &:after, &:before {
-        content:'';
-        position:absolute;
-        height: 2px;
-        width:100%;
-        left:50%;
-        margin-left:-15px;
-        background-color: black;
-        border-radius: 1px;
-        transition: all 300ms ease-in-out;
-    }
+    transition: all 300ms ease-in-out;
+  }
 
-    &:before {
-        top:-7px;
-    }
+  &:before {
+    top: -7px;
+  }
 
-    &:after {
-        bottom:-7px;
-    }
+  &:after {
+    bottom: -7px;
+  }
 }
 
 .ham-menu-on {
-    .hamburger {
-        height: 0;
+  .hamburger {
+    height: 0;
 
-        &:after, &:before {
-            top: 1px;
-        }
-
-        &:after {
-            transform: rotate(45deg);
-        }
-
-        &:before {
-            transform: rotate(-45deg);
-        }
+    &:after,
+    &:before {
+      top: 1px;
     }
 
-    &.ham-menu {
-        opacity: 1;
-        left: 0;
+    &:after {
+      transform: rotate(45deg);
     }
 
+    &:before {
+      transform: rotate(-45deg);
+    }
+  }
+
+  &.ham-menu {
+    opacity: 1;
+    left: 0;
+  }
 }
 
 #mobileNavbar .nav-item {
-    font-size: small;
+  font-size: small;
 }
 
 .nav-item {
-    font-family: 'roboto slab', serif;
-    font-weight: 700;
-    text-transform: uppercase;
+  font-family: "roboto slab", serif;
+  font-weight: 700;
+  text-transform: uppercase;
 
-    .fa-shopping-cart {
-        font-size: 1rem;
-        cursor:pointer;
-    }
+  .fa-shopping-cart {
+    font-size: 1rem;
+    cursor: pointer;
+  }
 
-    .nav-link {
-        cursor:pointer;
-    }
+  .nav-link {
+    cursor: pointer;
+  }
 }
 
 button.no-style {
-    border: none;
-    background-color: rgba(255,255,255,0)!important;
+  border: none;
+  background-color: rgba(255, 255, 255, 0) !important;
 }
 
-button.no-style:focus, button.no-style:active {
-    outline: none!important;
-    border: none!important;
-    box-shadow: none!important;
+button.no-style:focus,
+button.no-style:active {
+  outline: none !important;
+  border: none !important;
+  box-shadow: none !important;
 }
 
 .nav-link {
-    color:black!important;
+  color: black !important;
 }
 
 .nav-link:hover {
-    color:var(--primary)!important;
+  color: var(--primary) !important;
 }
 
-.blank{
-    background-color: rgba(255,255,255,0);
-    height: 100vh;
-    width: 100%;
-}
-
-.shopping-cart-wrapper {
-    background-color: rgba(255,255,255,1);
-    border-left: .5rem solid $primary;
-    height: 100vh;
+.blank {
+  background-color: rgba(255, 255, 255, 0);
+  height: 100vh;
+  width: 100%;
 }
 
 .shopping-cart {
-    position: fixed;
-    right: 0;
-    top: 0;
-    padding-top: 0rem;
-    height: 100vh;
-    width: 100%;
-    background-color: rgba(255, 255, 255, 1);
-    border-left: .5rem solid $primary;
-    z-index: 4000;
-    opacity: 1;
-    transition: right 300ms ease-out;
-    
-    overflow-y: scroll;
-    overflow-x: hidden;
+  position: fixed;
+  right: 0;
+  top: 0;
+  padding-top: 0rem;
+  height: 100%;
+  width: 100%;
+  background-color: rgba(255, 255, 255, 1);
+  border-left: 0.5rem solid $primary;
+  z-index: 4000;
+  opacity: 1;
+  transition: right 300ms ease-out;
 
+  overflow-y: scroll;
+  overflow-x: hidden;
 }
 
-.shopping-cart-hide{
-    right: -100vw;
-    box-shadow: none;
+.shopping-cart-hide {
+  right: -100vw;
+  box-shadow: none;
 }
 
 @media (min-width: 768px) {
-    .shopping-cart {
-        width: 100vw;
-        transition: right 400ms ease-out;
-    }
+  .shopping-cart {
+    width: 100vw;
+    transition: right 400ms ease-out;
+  }
 
-    .shopping-cart-hide {
-        right: -100vw;
-        box-shadow: none;
-    }
+  .shopping-cart-hide {
+    right: -100vw;
+    box-shadow: none;
+  }
 }
 
 @media (min-width: 992px) {
-    .shopping-cart {
-        width: 70vw;
-        transition: right 400ms ease-out;
-    }
+  .shopping-cart {
+    width: 70vw;
+    transition: right 400ms ease-out;
+  }
 
-    .shopping-cart-hide {
-        right: -70vw;
-        box-shadow: none;
-    }
+  .shopping-cart-hide {
+    right: -70vw;
+    box-shadow: none;
+  }
 }
 
 @media (min-width: 1200px) {
-    .shopping-cart {
-        width: 40vw;
-        transition: right 300ms ease-out;
-    }
+  .shopping-cart {
+    width: 40vw;
+    transition: right 300ms ease-out;
+  }
 
-    .shopping-cart-hide {
-        right: -40vw;
-        box-shadow: none;
-    }
+  .shopping-cart-hide {
+    right: -40vw;
+    box-shadow: none;
+  }
 }
 
-.cart-button{
-    position: fixed;
-    right: calc(39.5vw);
-    top: 50%;
-    width: 50px;
-    height: 50px;
-    border: .5rem solid $primary;
-    border-radius: 50%;
-    background-color: rgba(255,255,255,1);
-    z-index: 4000;
+.empty-cart {
+  position: absolute;
+  opacity: 0.3;
+  height: 100%;
+  font-weight: bold;
+
+  .fa {
+    color: "black";
+  }
+}
+
+.cart-button {
+  position: fixed;
+  right: calc(39.5vw);
+  top: 50%;
+  width: 50px;
+  height: 50px;
+  border: 0.5rem solid $primary;
+  border-radius: 50%;
+  background-color: rgba(255, 255, 255, 1);
+  z-index: 4000;
 }
 
 .cart-item {
-    border-top: 2px solid rgba(0,0,0,.2);
-    padding-top: 1rem;
-    padding-bottom: 1rem;
-    transform: scale(.9);
+  border-top: 2px solid rgba(0, 0, 0, 0.2);
+  padding-top: 1rem;
+  padding-bottom: 1rem;
+  transform: scale(0.9);
 
-    .price {
-        font-size: 2rem;
-        color: black;
-    }
+  .price {
+    font-size: 2rem;
+    color: black;
+  }
 }
 
-.qty-btn, .qty-btn:active {
-    background-color: rgba(0,0,0,0)!important;
-    color: $secondary!important;
-    width: 4ch;
-    height: 4ch;
+.qty-btn,
+.qty-btn:active {
+  background-color: rgba(0, 0, 0, 0) !important;
+  color: $secondary !important;
+  width: 4ch;
+  height: 4ch;
 }
 
-.qty-btn:hover, .qty-btn:focus {
-    background-color: $success!important;
-    color: white!important;
-    border-color: $success;
+.qty-btn:hover,
+.qty-btn:focus {
+  background-color: $success !important;
+  color: white !important;
+  border-color: $success;
 }
 
 .qty-btn:focus {
-    box-shadow: none;
+  box-shadow: none;
 }
 
 .qty-text {
-    font-weight: 700;
-    font-size: 1.5rem;
+  font-weight: 700;
+  font-size: 1.5rem;
 }
 
-.fa-trash:hover, .fa-trash:focus {
-    color:$danger;
+.fa-trash:hover,
+.fa-trash:focus {
+  color: $danger;
 }
 
 .cart-item:last-of-type {
-    border-bottom: 2px solid rgba(0,0,0,.2);
+  border-bottom: 2px solid rgba(0, 0, 0, 0.2);
 }
 
-.cart-footer{
-    position: relative;
-    margin: 0;
-    bottom: 0;
-    width: 100%;
-    /* border-top: 2px solid black; */
+.cart-footer {
+  position: relative;
+  margin: 0;
+  bottom: 0;
+  width: 100%;
+  /* border-top: 2px solid black; */
 }
 
-.cart-bg{
-    position: fixed;
-    top: 0;
-    right: 0;
-    height: 100vh;
-    width: 100vw;
-    background-color: rgba(0,0,0,0.5);
-    z-index: 3999;
-    opacity: 1;
-    transition: opacity 500ms ease-in-out;
+.cart-bg {
+  position: fixed;
+  top: 0;
+  right: 0;
+  height: 100vh;
+  width: 100vw;
+  background-color: rgba(0, 0, 0, 0.5);
+  z-index: 3999;
+  opacity: 1;
+  transition: opacity 500ms ease-in-out;
 }
 
 .cart-bg-hide {
-    right: -100vw;
-    opacity: 0;
+  right: -100vw;
+  opacity: 0;
 }
 
 .about-left {
-    text-align: right;
+  text-align: right;
 }
 
 .about-right {
-    text-align: left;
+  text-align: left;
 }
 
 .team-img {
-    border-bottom: .5rem solid var(--primary);
+  border-bottom: 0.5rem solid var(--primary);
 }
 
 .hero-row {
-    background: black;
-    overflow: hidden;
+  background: black;
+  overflow: hidden;
 
-    img {
-        opacity: 0.4;
-    }
+  img {
+    opacity: 0.4;
+  }
+}
+
+.hero-section {
+  background-color: rgba(255, 255, 255, 1);
 }
 
 .hero-row.hero-bg {
-    /* height: 80vh; */
-    height: 60vh;
+  height: 60vh;
 }
 
 .hero-bg {
-    background-color: rgba(0,0,0,.4);
-    background-image: url("./hero-product-tankmain.jpg");
-    background-blend-mode: darken;
-    background-position: center;
-    background-size: cover;
-    background-repeat: no-repeat;
+  background-color: rgba(0, 0, 0, 0.4);
+  background-image: url("./hero-product-tankmain.jpg");
+  background-blend-mode: darken;
+  background-position: center;
+  background-size: cover;
+  background-repeat: no-repeat;
 }
 
-.hero-text
-{
-    position: absolute;
-    bottom: 50%;
-    width: 100%;
-    color: #FFF;
+.hero-text {
+  position: absolute;
+  bottom: 50%;
+  width: 100%;
+  color: #fff;
 }
 
 #carouselExampleIndicators img {
-    background-color: black;
+  background-color: black;
 }
 
 .top-button {
-    position: fixed;
-    right: 10px;
-    bottom: 35px;
-    z-index:1040;
+  position: fixed;
+  right: 10px;
+  bottom: 35px;
+  z-index: 1040;
 
-    i {
-        background-color:rgba(0, 0, 0, .8);
-        transition: transform 250ms ease-in-out;
-        border-radius: .25rem; 
-    }
+  i {
+    background-color: rgba(0, 0, 0, 0.8);
+    transition: transform 250ms ease-in-out;
+    border-radius: 0.25rem;
+  }
 
-    i:hover {
-        transform: scale(1.3);
-    }
+  i:hover {
+    transform: scale(1.3);
+  }
 }
 
 .card-body.collection-border {
-    padding-top: .33rem;
-    padding-bottom: .1rem;
+  padding-top: 0.33rem;
+  padding-bottom: 0.1rem;
 }
 
 .collection-border {
-    border-top: .5rem solid var(--primary);
+  border-top: 0.5rem solid var(--primary);
 
-    h6 {
-        font-weight: 400;
-        font-style: italic;
-    }
+  h6 {
+    font-weight: 400;
+    font-style: italic;
+  }
 }
 
 .modal-content img {
-    width: 200px;
+  width: 200px;
 }
 
 .product-header {
-    font-size: 2rem;
+  font-size: 2rem;
 }
 
 .product-subheader {
-    font-size: 1rem;
-    font-style: italic;
+  font-size: 1rem;
+  font-style: italic;
 }
 
-
 .price {
-    color: rgb(0, 173, 0);
-    font-weight:700;
+  color: rgb(0, 173, 0);
+  font-weight: 700;
 }
 
 .card-footer i {
-    font-size: 1.6rem;
-    margin: .1rem;
-
-    
+  font-size: 1.6rem;
+  margin: 0.1rem;
 }
 
 .card-footer {
-    .price {
-        margin: 0;
-    }
+  .price {
+    margin: 0;
+  }
 }
 
 #preorder {
-    .card {
-        -webkit-box-shadow: .01rem .01rem .4rem .01rem rgba(0,0,0,0.1); 
-        box-shadow:         .01rem .01rem .4rem .01rem rgba(0,0,0,0.1);
-        transition: transform 250ms ease-in-out,
-                    box-shadow 250ms ease-in-out;
-    }
+  .card {
+    -webkit-box-shadow: 0.01rem 0.01rem 0.4rem 0.01rem rgba(0, 0, 0, 0.1);
+    box-shadow: 0.01rem 0.01rem 0.4rem 0.01rem rgba(0, 0, 0, 0.1);
+    transition: transform 250ms ease-in-out, box-shadow 250ms ease-in-out;
+  }
 
-    .card:hover,
-    .card:active {
-        transform: scale(1.025);
-        -webkit-box-shadow: .1rem .1rem .8rem .01rem rgba(0,0,0,0.2); 
-        box-shadow:         .1rem .1rem .8rem .01rem rgba(0,0,0,0.2);
-        cursor:pointer;
-    }
+  .card:hover,
+  .card:active {
+    transform: scale(1.025);
+    -webkit-box-shadow: 0.1rem 0.1rem 0.8rem 0.01rem rgba(0, 0, 0, 0.2);
+    box-shadow: 0.1rem 0.1rem 0.8rem 0.01rem rgba(0, 0, 0, 0.2);
+    cursor: pointer;
+  }
 }
 
 .fa-shopping-cart.popup {
-    
-    color: $primary;
-    font-size: 1rem;
-    padding: .25rem;
+  color: $primary;
+  font-size: 1rem;
+  padding: 0.25rem;
 
-    &.docked {
-        right: -1rem;
-    }
+  &.docked {
+    right: -1rem;
+  }
 
-    &.hidden {
-        right: -3rem;
-    }
-
+  &.hidden {
+    right: -3rem;
+  }
 }
 
-.cart-icon-wrap{
-    position: fixed;
-    right: -1.5rem;
-    top: 200px;
-    border: 2px solid $primary;
-    height: 3rem;
-    width: 3rem;
-    border-radius: 50%;
-    display: flex;
-    justify-content: start;
-    align-items: center;
+.cart-icon-wrap {
+  position: fixed;
+  right: -1.5rem;
+  top: 200px;
+  border: 2px solid $primary;
+  height: 3rem;
+  width: 3rem;
+  border-radius: 50%;
+  display: flex;
+  justify-content: start;
+  align-items: center;
 }
 
 #ourstory .media {
-    img {
-        border-radius: 50%;
-        width:150px;
-        padding: 1rem;
-    }
+  img {
+    border-radius: 50%;
+    width: 150px;
+    padding: 1rem;
+  }
 
-    h6 {
-        border-left: 6px solid $primary;
-        font-size: smaller;
-    }
+  h6 {
+    border-left: 6px solid $primary;
+    font-size: smaller;
+  }
 }
 
 .fa-facebook-square {
-    color:#3b5998;
+  color: #3b5998;
 }
 
 .fa-twitter-square {
-    color:#1DA1F2;
+  color: #1da1f2;
 }
 
 .fa-youtube-square {
-    color: #ff0000;
+  color: #ff0000;
 }
 
 .fa-instagram {
-    /* background: linear-gradient(45deg, #405de6, #5851db, #833ab4, #c13584, #e1306c, #fd1d1d);
+  /* background: linear-gradient(45deg, #405de6, #5851db, #833ab4, #c13584, #e1306c, #fd1d1d);
     clip-path: inset(4px 1px);
     clip-path: polygon(50% 0%, 100% 50%, 50% 100%, 0% 50%); */
-    color: #000;
-} 
+  color: #000;
+}
 
 .fa-share-alt-square {
-    color: var(--primary);
+  color: var(--primary);
 }
 
 footer {
-    .fa {
-        color:#000;
-        transition: transform 250ms ease-in-out;
-        font-size: 3rem;
-    }
+  .fa {
+    color: #000;
+    transition: transform 250ms ease-in-out;
+    font-size: 3rem;
+  }
 
-    .fa:hover,
-    .fa:active {
-        transform: scale(2);
-    }
+  .fa:hover,
+  .fa:active {
+    transform: scale(2);
+  }
 
-    .small {
-        font-size: .7rem;
-        font-style: italic;
-    }
+  .small {
+    font-size: 0.7rem;
+    font-style: italic;
+  }
 }
 
 .sticky {
-    font-size:x-small;
-    background-color: white;
+  font-size: x-small;
+  background-color: white;
 
-    .fa {
-        font-size: 1rem;
-    }
+  .fa {
+    font-size: 1rem;
+  }
 }
 
 .faq {
-    .card {
-        margin: 1rem 0;
-    }
+  .card {
+    margin: 1rem 0;
+  }
 
-    .card-header {
-        cursor:pointer;
-    }
+  .card-header {
+    cursor: pointer;
+  }
 }
 
 #sizing {
-    .card {
-        margin-top: 1.5rem;
-    }
+  .card {
+    margin-top: 1.5rem;
+  }
 
-    .card img {
-        width: 150px;
-        align-self: center;
-        padding: 1.5rem;
-    }
+  .card img {
+    width: 150px;
+    align-self: center;
+    padding: 1.5rem;
+  }
 
-    h6 {
-        font-size: small;
-        font-style: italic;
-    }
+  h6 {
+    font-size: small;
+    font-style: italic;
+  }
 }
 
 #donation {
-    img {
-        border-top: 6px solid $primary;
-    }
+  img {
+    border-top: 6px solid $primary;
+  }
 }
 
 .stop-scrolling {
-    overflow: visible;
+  overflow: hidden;
 }
